# FEM-automation

./: .gitignore  CELL_MAPPING.md  README.md  README_ko.md  bridge_input_template_v3.xlsx  pyproject.toml  requirements.txt  test_template.xlsx
inputs/: bridge_input_template.xlsx
notebooks/: 효자교(상행)251118.ipynb
scripts/: make_template.py  run_case.py  run_excel.py  run_modal.py  snapshot.py
src/bridge_psci/: config.py  defaults_base.py  legacy_globals.py
src/bridge_psci/analysis/: __init__.py  modal.py  moving_load.py
src/bridge_psci/io/: __init__.py  excel_io.py
src/bridge_psci/model/: __init__.py  builder.py  visualization.py
src/bridge_psci/utils/: __init__.py  plotting.py
